# FeatureMapICON

./: .gitignore  .gitmodules  DavisExperiment.ipynb  LICENSE  README.md  environment.yml  fmapicon.ipynb  fmapicon.py  requirements.txt  setup.cfg
.github/workflows/: selfhosted-action.yml
data/: DAVIS.py  __init__.py  cache_videos.py  download_preprocess_DAVIS.sh  eval_osvos_DAVIS.sh  init_shapenet.sh  init_sintel.sh
data/kinetics_scripts/: convert.sh  download.py
data/mannequin_challenge_scripts/: convertVideos.py  download.py
fmapicon/: training.py
notebooks/: DavisExperimentPytorch-NoCrop-NoGrid.ipynb  DavisExperimentPytorch-NoCrop.ipynb  ShapeNet.ipynb  feature_properties.ipynb  fmapicon.ipynb  training_graphs.ipynb
pytorch/: models.py  training.ipynb  training.py  training_graphs.ipynb  videoReplayFast.py
server/: serve.py
src/fmapicon/: models.py  threaded_video_dataset.py  training.py  utils.py
tensorflow/: FatTail.py  car_videos.py  davisDS.ipynb  fmapicon_utils.py  mannequin.py  mannequin_dense.py  models.py  videoReplayFast.py
tensorflow/results/car-gpu3-2/: info.txt
tensorflow/results/car-gpu3-2/epoch59/: model_weights.tf.index
tensorflow/results/clip.6_11/: info.txt
tensorflow/results/clip.6_11/epoch51/: model_weights.tf.index
tensorflow/results/log_probability_2/: info.txt
tensorflow_/: Sintel.ipynb  car_videos.py  davisDS-Copy1.ipynb  davisDS.ipynb  fmapicon_utils.py  mannequin.py  mannequin_dense.py  videoReplayFast.py
tensorflow_/test_data/: loss.txt
test/: data.py  test_DAVIS.py  test_DAVIS_benchmark.py  test_imports.py
(+3 files in other folders)
