[metadata]
name = fmapicon
version = 0.1.0
author = Hastings Greer
author_email = t@hgreer.com
description = a package for exploring feature-wise inverse consistency
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uncbiag/FeatureMapICON
project_urls =
    Bug Tracker = https://github.com/uncbiag/FeatureMapICON/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.4

install_requires =
    scipy
    pandas
    tqdm
    opencv-python-headless
    jupyter
    numpy
    torchvision
    torch
    matplotlib
    footsteps
    pykeops

[options.packages.find]
where = src

